--- a/docs/package.json
+++ b/docs/package.json
@@ -29,18 +29,17 @@
     "highlight.js": "^9.15.6",
     "lit-html": "^1.3.0",
     "reveal.js": "^3.9.2",
-    "sfeir-school-theme": "^2.0.1"
+    "sfeir-school-theme": "2.2.0"
   },
   "devDependencies": {
-    "chokidar-cli": "^1.2.2",
+    "chokidar-cli": "^3.0.0",
     "live-server": "^1.2.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^7.0.1",
     "parallelshell": "3.0.1",
     "snowpack": "^1.6.0"
   },
   "snowpack": {
     "webDependencies": [
-      "sfeir-school-theme/dist/**/*",
       "lit-html",
       "highlight.js/styles/**/*"
     ]
