--- a/steps/03-Reusable-Workflows-solution/ex1-reusable.yml
+++ b/steps/03-Reusable-Workflows-solution/ex1-reusable.yml
@@ -8,28 +8,13 @@ jobs:
     steps:
         - name: checkout
           uses: actions/checkout@v2
-          with:
-            fetch-depth: 0
-
-        - name: get-short-hash
-          id: shorthash
-          env:
-            GITHUB_SHA: ${{ github.sha }}
-          shell: bash
-          run: echo "::set-output name=sha_short::${GITHUB_SHA::7}"
-
-        - name: print-short-hash
-          env:
-              SHA_SHORT: ${{ steps.shorthash.outputs.sha_short }}
-          run: echo "The short Sha-1 is ${SHA_SHORT}"  
-
         - name : setup node
           uses: actions/setup-node@v2
           with:
             node-version: 'lts/*'
-
         - name: run test
           shell: bash
           run: |
+            node -v
             npm install
             npm test
