--- a/steps/03-Reusable-Workflows-solution/ex1.yml
+++ b/steps/03-Reusable-Workflows-solution/ex1.yml
@@ -6,10 +6,6 @@ jobs:
   run-npm-test:
     runs-on: ubuntu-latest
     steps:
-        - name: checkout
-          uses: actions/checkout@v2
-          with:
-            fetch-depth: 0
-
         - name : test app
-          uses: myRepo/ReusableWorkflow/.github/workflows/test-npm.yaml@main
+          uses: {owner}/{repo}/.github/workflows/{myreusable-workflow.yaml}@main #remote
+          # uses:./.github/workflows/{filename} #local
