Update and rename ex1.yml to ex3.yml

--- a/steps/03-Reusable-Workflows-solution/ex3.yml
+++ b/steps/03-Reusable-Workflows-solution/ex3.yml
@@ -9,3 +9,5 @@ jobs:
         - name : test app
           uses: {owner}/{repo}/.github/workflows/{myreusable-workflow.yaml}@main #remote
           # uses:./.github/workflows/{filename} #local
+          with:
+            node-version: 14
