--- a/steps/03-Reusable-Workflows-solution/ex3-reusable.yml
+++ b/steps/03-Reusable-Workflows-solution/ex3-reusable.yml
@@ -3,7 +3,8 @@ on:
   workflow_call:
     inputs:
       node-version:
-        required: true
+        required: false
+        default: 'lts'
         type: string
 
 jobs:
