--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,7 +1,7 @@
 name: Reusable Workflow
 on:
   workflow_dispatch:
-
+  pull_request:
 jobs:
   run-npm-test:
     uses: ./.github/workflows/reusable.yaml #local
