--- a/.github/workflows/cache.yaml
+++ b/.github/workflows/cache.yaml
@@ -8,6 +8,9 @@ jobs:
     steps:
         - name: checkout
           uses: actions/checkout@v4
+          with:
+            repository: 'sfeir-open-source/sfeir-school-github-actions-template'
+
         - name : setup node
           uses: actions/setup-node@v4
           with:
@@ -29,6 +32,9 @@ jobs:
     steps:
         - name: checkout
           uses: actions/checkout@v4
+          with:
+            repository: 'sfeir-open-source/sfeir-school-github-actions-template'
+
         - uses: actions/cache@v4
           with:
             path: ./node_modules
