--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -17,7 +17,6 @@ jobs:
           uses: actions/checkout@v4
           with:
             repository: 'sfeir-open-source/sfeir-school-github-actions-template'
-            path: projects
         - name : setup node
           uses: actions/setup-node@v4
           with:
@@ -46,6 +45,9 @@ jobs:
     steps:
         - name: checkout
           uses: actions/checkout@v4
+          with:
+            repository: 'sfeir-open-source/sfeir-school-github-actions-template'
+
         - name : setup node
           uses: actions/setup-node@v4
           with:
