--- a/.github/workflows/reusable.yaml
+++ b/.github/workflows/reusable.yaml
@@ -19,6 +19,9 @@ jobs:
     steps:
         - name: checkout
           uses: actions/checkout@v4
+          with:
+            repository: 'sfeir-open-source/sfeir-school-github-actions-template'
+
         - name : setup node
           uses: actions/setup-node@v4
           with:
