--- a/.github/workflows/ga-basics.yaml
+++ b/.github/workflows/ga-basics.yaml
@@ -8,6 +8,9 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+        with:
+          repository: 'sfeir-open-source/sfeir-school-github-actions-template'
+
       - name : setup node
         uses: actions/setup-node@v4
         with:
@@ -23,6 +26,9 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+        with:
+          repository: 'sfeir-open-source/sfeir-school-github-actions-template'
+
       - name : setup node
         uses: actions/setup-node@v4
         with:
@@ -38,6 +44,9 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+        with:
+          repository: 'sfeir-open-source/sfeir-school-github-actions-template'
+
       - name : setup node
         uses: actions/setup-node@v4
         with:
